index html con codigo html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-INDEX HTML
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>segunda</title>
+  </head>
+  <body>
+
+  </body>
+</html>
